@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<jnlp spec="1.0+"
+  codebase="http://nees.buffalo.edu/software/RBNBDataViewer/jnlp"
+  href="RBNBDataViewer.jnlp">
+	<information>
+		<title>RBNB Data Viewer</title>
+		<vendor>University of Buffalo</vendor>
+		<homepage href="http://nees.buffalo.edu/software/RBNBDataViewer/" />
+		<description>A tool to view synchronzied, streaming data from a RBNB server.</description>
+		<offline-allowed/>
+	</information>
+	<security>
+		<all-permissions/>
+	</security>
+	<resources>
+		<j2se version="1.4+" initial-heap-size="64m" max-heap-size="256m"/>
+		<jar href="RBNBDataViewer.jar" main="true"/>
+		<jar href="rbnb.jar"/>
+		<jar href="commons-logging.jar"/>
+		<jar href="gnujaxp.jar"/>
+		<jar href="jcommon-0.9.7.jar"/>
+		<jar href="jfreechart-0.9.21.jar"/>
+		<jar href="log4j-1.2.8.jar"/>
+	</resources>
+	<application-desc main-class="org.nees.buffalo.rbnb.dataviewer.DataViewer">
+		<property name="org.apache.commons.logging.Log" value="org.apache.commons.logging.impl.NoOpLog"/>
+		<argument>rbnb.nees.buffalo.edu:3333</argument>
+	</application-desc>
+</jnlp>
